--- a/angular-material2-extended/src/app/views/root/dashboard/dashboard.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
     </mat-toolbar>
 
   </mat-sidenav>
-  <mat-sidenav-content>
+  <mat-sidenav-content class="side-content">
 
     <mat-toolbar color="primary">
       <mat-toolbar-row>
@@ -23,7 +23,7 @@
       </mat-toolbar-row>
     </mat-toolbar>
 
-    <div>
+    <div class="dashboard-content">
       <router-outlet></router-outlet>
     </div>
 
