completed vanilla formly

--- a/angular-material2-extended/src/app/views/root/dashboard/dashboard.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
       </mat-toolbar-row>
     </mat-toolbar>
 
-    <div class="dashboard-content">
+    <div class="dashboard-content px-2 pt-3">
       <router-outlet></router-outlet>
     </div>
 
