--- a/angular-material2-extended/src/app/views/root/dashboard/vanilla-formly/vanilla-formly.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/vanilla-formly/vanilla-formly.component.html
@@ -1,4 +1,12 @@
 
 <div>
   hello formly!
+
+  <form [formGroup]="form" (ngSubmit)="submit()">
+    <formly-form [model]="model" [fields]="fields" [options]="options" [form]="form">
+      <button type="submit" class="btn btn-primary submit-button">Submit</button>
+      <button type="button" class="btn btn-default" (click)="options.resetModel()">Reset</button>
+    </formly-form>
+  </form>
+
 </div>
