--- a/angular-material2-extended/src/app/views/root/dashboard/formly-fields/formly-fields.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/formly-fields/formly-fields.component.html
@@ -1,10 +1,11 @@
 <div>
 
-  <form [formGroup]="form" (ngSubmit)="submit()">
-    <formly-form [model]="model" [fields]="fields" [options]="options" [form]="form">
+ 
+  <form [formGroup]="formlyGroup.form" (ngSubmit)="submit()">
+    <formly-form [model]="formlyGroup.model" [fields]="formlyGroup.fields" [options]="formlyGroup.options" [form]="formlyGroup.form">
       <div class="pt-2">
         <button type="submit" class="btn btn-primary submit-button ">Submit</button>
-        <button type="button" class="btn btn-default" (click)="options.resetModel()">Reset</button>
+        <button type="button" class="btn btn-default" (click)="formlyGroup.options.resetModel()">Reset</button>
       </div>
     </formly-form>
   </form>
