--- a/angular-material2-extended/src/app/views/root/dashboard/dashboard.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/dashboard.component.html
@@ -26,6 +26,14 @@
          [routerLink]="['/dashboard/formlyFieldTypes']">
         Formly Fields
       </a>
+      <a mat-list-item
+         (click)="mobileQuery.matches && start.close()"
+         routerLinkActive
+         #routerLinkActiveInstance="routerLinkActive"
+         [attr.tabindex]="routerLinkActiveInstance.isActive ? 0 : -1"
+         [routerLink]="['/dashboard/formlylayout']">
+        Formly Layout
+      </a>
     </mat-nav-list>
 
 </mat-sidenav>
