formly custom layout

--- a/angular-material2-extended/src/app/views/root/dashboard/formly-layout/formly-layout.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/formly-layout/formly-layout.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
 
   <form [formGroup]="formlyGroup.form" (ngSubmit)="submit()">
     <formly-form [model]="formlyGroup.model" [fields]="formlyGroup.fields" [options]="formlyGroup.options" [form]="formlyGroup.form">
