add loading button component

--- a/angular-material2-extended/src/app/views/root/dashboard/dashboard.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/dashboard.component.html
@@ -9,6 +9,14 @@
     </mat-toolbar>
 
     <mat-nav-list>
+      <a mat-list-item
+         (click)="mobileQuery.matches && start.close()"
+         routerLinkActive
+         #routerLinkActiveInstance="routerLinkActive"
+         [attr.tabindex]="routerLinkActiveInstance.isActive ? 0 : -1"
+         [routerLink]="['/dashboard/components']">
+        Components
+      </a>
       <a 
          mat-list-item
          (click)="mobileQuery.matches && start.close()"
