snackbar status reporter

--- a/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
@@ -33,6 +33,10 @@
       </loading-panel>
 
     </div>
+    <div class="col-md-12 mt-2">
+      <button mat-raised-button (click)="ShowProgress()">Show Progress</button>
+      <button mat-raised-button (click)="ShowCompleted()">Show Completed</button>
+    </div>
   </div>
 
 </div>
