formly async validator

--- a/angular-material2-extended/src/app/views/root/dashboard/dashboard.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/dashboard.component.html
@@ -50,6 +50,14 @@
          [routerLink]="['/dashboard/formlylayoutTemplate']">
         Formly Layout Template
       </a>
+      <a mat-list-item
+         (click)="mobileQuery.matches && start.close()"
+         routerLinkActive
+         #routerLinkActiveInstance="routerLinkActive"
+         [attr.tabindex]="routerLinkActiveInstance.isActive ? 0 : -1"
+         [routerLink]="['/dashboard/formlyAsyncValidator']">
+        Formly Async  Validator
+      </a>
     </mat-nav-list>
 
 </mat-sidenav>
