--- a/angular-material2-extended/src/app/views/root/dashboard/formly-stepper-example/formly-stepper-example.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/formly-stepper-example/formly-stepper-example.component.html
@@ -1,4 +1,5 @@
 
-<div>Formly Stepper Example</div>
-
-<formly-stepper [FormlyStepper]="Forms" [StepperType]="1"></formly-stepper>
+<formly-stepper [FormlyStepper]="Forms" [StepperType]="1"
+                [HideHeader]="false"
+                [Busy]="IsWorking"
+                (OnCompleted)="Complete($event)"></formly-stepper>
