include ie polyfills

--- a/angular-material2-extended/src/app/components/snn-input/ssn-input.component.html
+++ b/angular-material2-extended/src/app/components/snn-input/ssn-input.component.html
@@ -7,7 +7,7 @@
   <i class="fa fa-eye" aria-hidden="true" *ngIf="!HideValue"></i>
   <i class="fa fa-eye-slash" aria-hidden="true" *ngIf="HideValue"></i>
 </div>
-<div>
+<!--<div>
 
   <input [value]="$modelvalue" />
-</div>
+</div>-->
