--- a/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
@@ -72,7 +72,9 @@
 
     <div class="col-md-12 mt-2">
       <form class="example-form">
-        <ssn-input placeholder="Enter Social Security" [HideValue]="true" [formControl]="SnnFormControl" [required]="true" [DisplayToggle]="true"></ssn-input>
+        <ssn-input placeholder="Enter Social Security" [HideValue]="true" [formControl]="SnnFormControl"
+                   [required]="true"
+                   [DisplayToggle]="true"></ssn-input>
         <mat-error *ngIf="SnnFormControl.hasError('required')">
           required ssn
         </mat-error>
