--- a/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
@@ -72,10 +72,10 @@
 
     <div class="col-md-12 mt-2">
       <form class="example-form">
-        <ssn-input placeholder="Enter Social Security" [HideValue]="true" [formControl]="SnnFormControl" [disabled]="true"
+        <ssn-input placeholder="Enter Social Security" [HideValue]="true" [formControl]="SnnFormControl" [disabled]="false"
                    [required]="true"
-                   [Last4Only]="true"
-                   [DisplayToggle]="false"></ssn-input>
+                   [Last4Only]="false"
+                   [DisplayToggle]="true"></ssn-input>
         <!--<mat-error *ngIf="SnnFormControl.hasError('required')">
           required ssn
         </mat-error>-->
