--- a/angular-material2-extended/src/styles.scss
+++ b/angular-material2-extended/src/styles.scss
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import url('//fonts.googleapis.com/icon?family=Material+Icons');
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+/*@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';*/
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 @import '~bootstrap/scss/bootstrap';
 /*@import '~@angular/material/theming';
 
