--- a/angular-material2-extended/src/app/views/root/main/main-view.component.html
+++ b/angular-material2-extended/src/app/views/root/main/main-view.component.html
@@ -97,7 +97,7 @@
       </mat-toolbar-row>
     </mat-toolbar>
 
-    <div class="dashboard-content px-2 pt-3">
+    <div class="dashboard-content">
       <router-outlet></router-outlet>
     </div>
 
