--- a/angular-material2-extended/src/app/views/root/external-views/external-view.component.html
+++ b/angular-material2-extended/src/app/views/root/external-views/external-view.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="column" >
   <div fxFill fxFlex="100">
-    My external views..
+    <!--My external views..-->
 
 
     <router-outlet></router-outlet>
