--- a/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
@@ -81,6 +81,17 @@
         </mat-error>-->
       </form>
 </div>
+    <div class="col-md-12">
+
+      <div fxLayout="column" fxFlex="100">
+
+        <img-upload>
+          Upload
+        </img-upload>
+
+      </div>
+
+    </div>
 
   </div>
 
