--- a/angular-material2-extended/src/app/components/img-upload/img-upload.component.css
+++ b/angular-material2-extended/src/app/components/img-upload/img-upload.component.css
@@ -37,3 +37,7 @@
     height: 0;
     padding-bottom: calc(100% / (var(--aspect-ratio)));
   }
+
+:host ::ng-deep loading-button-ready .mat-icon {
+  vertical-align:middle;
+}
