--- a/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
@@ -72,7 +72,7 @@
 
     <div class="col-md-12 mt-2">
       <form class="example-form">
-        <ssn-input placeholder="Enter Social Security" [HideValue]="true" [formControl]="SnnFormControl" [disabled]="false"
+        <ssn-input placeholder="Enter Social Security" [HideValue]="true" [formControl]="SnnFormControl" 
                    [required]="true"
                    [Last4Only]="false"
                    [DisplayToggle]="true"></ssn-input>
@@ -85,7 +85,7 @@
 
       <div fxLayout="column" fxFlex="100">
 
-        <img-upload>
+        <img-upload PreviewWidth="300px">
           Upload
         </img-upload>
 
