image loader implementation

--- a/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
+++ b/angular-material2-extended/src/app/views/root/dashboard/components-example/components-example.component.html
@@ -83,6 +83,19 @@
 </div>
     <div class="col-md-12">
 
+      <div fxLayout="column" fxFlex="20">
+
+        <image-rio-loader [actual-width]="300" [actual-height]="200" image-id="intl1"
+                          aspect-ratio-width="2" aspect-ratio-height="1"
+                          delay-show="200" missing-image-id="dSaintlp"></image-rio-loader>
+
+      </div>
+
+      
+
+    </div>
+    <div class="col-md-12">
+
       <div fxLayout="column" fxFlex="100">
 
         <img-upload PreviewWidth="300px">
